Ctrl+Shift+click should have the same effect as Shift+click

This makes Dolphin 2.0's behaviour consistent with Dolphin 1.x.

BUG: 300788
FIXED-IN: 4.9.0